templates/02_securityGroup.yml
AWSTemplateFormatVersion: '2010-09-09'

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Base Setting
        Parameters:
          - ENV
          - ServiceName
      - Label:
          default: Peer VPC Parameter
        Parameters:
          - PeerVpcCidrBlock1
      - Label:
          default: Options
        Parameters:
          - MigrationHubServerID

#スタックパラメーター設定
Parameters:
  #環境名
  ENV:
    Type: String
    AllowedValues: ['prod', 'stg', 'dev']
    ConstraintDescription: Enter prod, stg, or dev."

  #サービス名
  ServiceName:
    Type: String
    AllowedPattern: ^[a-z0-9-]*$
    Default: play-store
    ConstraintDescription: Malformed input-Parameter ServiceName must match pattern [a-z0-9-]+
    Description: Enter service name, like 「play-store」

  # For VPC Peering
  # #1
  PeerVpcCidrBlock1:
    Type: String
    Default: ''
    Description: Enter Peering VPC ID, like 「10.1.0.0/16」

  # MigrationHubServerID
  MigrationHubServerID:
    Type: String
    ConstraintDescription: Malformed Input-Parameter must match pattern [a-z0-9-_]+
    Description: Enter Migration Hub Server ID, like 「d-server-000zia7b0qhil8」
    Default: ''

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      Label:
        default: VPC Peer Connection Configuration
      Parameters:
        - PeerVpcCidrBlock1

Conditions:
  hasPeerVpc: !Not [!Equals [!Ref PeerVpcCidrBlock1, '']]
  hasMigrationHubServerID: !Not [!Equals [!Ref MigrationHubServerID, '']]

Resources:
  # ALB
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ServiceName}-${ENV}-alb-sg
      GroupDescription: !Sub ${ServiceName}-${ENV}-alb-sg
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-${ENV}-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub ${ServiceName}-${ENV}-alb-sg
      - Key: ENV
        Value: !Ref ENV
      - Key: Project
        Value: !Ref ServiceName
      - !If
        - hasMigrationHubServerID
        - Key: map-migrated
          Value: !Ref MigrationHubServerID
        - !Ref AWS::NoValue

  # ALB Open SecurityGroup
  OpenALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ServiceName}-${ENV}-open-alb-sg
      GroupDescription: !Sub ${ServiceName}-${ENV}-open-alb-sg
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-${ENV}-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub ${ServiceName}-${ENV}-open-alb-sg
      - Key: ENV
        Value: !Ref ENV
      - Key: Project
        Value: !Ref ServiceName
      - !If
        - hasMigrationHubServerID
        - Key: map-migrated
          Value: !Ref MigrationHubServerID
        - !Ref AWS::NoValue

  # Internal Network
  CommonSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: ALBSecurityGroup
    Properties:
      GroupName: !Sub ${ServiceName}-${ENV}-common-sg
      GroupDescription: !Sub ${ServiceName}-${ENV}-common-sq
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-${ENV}-VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt  ALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !GetAtt  ALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !GetAtt  ALBSecurityGroup.GroupId
        - !If
          - hasPeerVpc
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: !Ref PeerVpcCidrBlock1
            Description: 'from Other AWS VPC1'
          - !Ref AWS::NoValue
      Tags:
      - Key: Name
        Value: !Sub ${ServiceName}-${ENV}-common-sg
      - Key: ENV
        Value: !Ref ENV
      - Key: Project
        Value: !Ref ServiceName
      - !If
        - hasMigrationHubServerID
        - Key: map-migrated
          Value: !Ref MigrationHubServerID
        - !Ref AWS::NoValue

  # Ingress Common SecurityGroup
  IngressCommonToCommonSecurityGroup:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: CommonSecurityGroup
    Properties:
      GroupId: !GetAtt CommonSecurityGroup.GroupId
      IpProtocol: -1
      SourceSecurityGroupId: !Ref CommonSecurityGroup

  # Allow access IP from PLAY, inc office
  PlayOfficeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ServiceName}-${ENV}-play-office-sg
      GroupDescription: !Sub ${ServiceName}-${ENV}-play-office-sg
      VpcId:
        Fn::ImportValue: !Sub ${ServiceName}-${ENV}-VpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          CidrIp: 113.43.239.66/32
          Description: Tokyo Office
        - IpProtocol: -1
          CidrIp: 124.36.35.82/32
          Description: Tokyo Office New
        - IpProtocol: -1
          CidrIp: 122.221.102.154/32
          Description: Fukuoka Office
        - IpProtocol: -1
          CidrIp: 113.42.102.154/32
          Description: Fukuoka Office New
      Tags:
      - Key: Name
        Value: !Sub ${ServiceName}-${ENV}-play-office-sg
      - Key: ENV
        Value: !Ref ENV
      - Key: Project
        Value: !Ref ServiceName
      - !If
        - hasMigrationHubServerID
        - Key: map-migrated
          Value: !Ref MigrationHubServerID
        - !Ref AWS::NoValue

Outputs:
  ALBSecurityGroupId:
    Value: !GetAtt ALBSecurityGroup.GroupId
    Export:
      Name: !Sub ${ServiceName}-${ENV}-alb-sg-id
  CommonSecurityGroup:
    Value: !GetAtt CommonSecurityGroup.GroupId
    Export:
      Name: !Sub ${ServiceName}-${ENV}-common-sg-id
  PlayOfficeSecurityGroup:
    Value: !GetAtt PlayOfficeSecurityGroup.GroupId
    Export:
      Name: !Sub ${ServiceName}-${ENV}-play-office-sg-id
  OpenALBSecurityGroupId:
    Value: !GetAtt OpenALBSecurityGroup.GroupId
    Export:
      Name: !Sub ${ServiceName}-${ENV}-open-alb-sg-id
